adding styles to html1 homepage

--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <html lang="en">
   <head>
     <title>HtML and CSS Authoring 1</title>
-  </head>
+
+    <style>
+body{
+    background-color: deeppink;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin: 30px;
+    padding: 50px;
+    font-size: 30px;
+    color: rgb(73, 227, 207);
+}
+h1{
+    font-family: cursive;
+    font-size:50px;
+    color: rgb(125, 8, 234);
+}
+a:link,
+a:visited,
+a:hover{
+    color: rgb(209, 247, 17);
+    font-weight: bolder;
+}
+a:hover{
+    color: rgb(62, 1, 244);
+}
+    </style>
+  
+</head>
 
   <body>
     <h1>HTML and CSS Authoring 1</h1>
