--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <style>
 body{
-    background-color: deeppink;
+     background-color: rgb(244, 92, 173);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: 30px;
     padding: 50px;
