--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ a:hover{
 
     <ul>
       <li><a href="cat-photos/index.html">Cat Photos App</a></li>
-      <li><a href="gallery/index.html">Gallery</a></li>
+      <li><a href="gallery/index.html">Photo Gallery</a></li>
     </ul>
     
   </body>
