--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ a:hover{
     <ul>
       <li><a href="cat-photos/index.html">Cat Photos App</a></li>
       <li><a href="gallery/index.html">Photo Gallery</a></li>
-      <li><a href="tribute/index.html">Photo Gallery</a></li>
+      <li><a href="tribute/index.html">Tribute</a></li>
     </ul>
     
   </body>
