--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@ a:hover{
 
   <body>
     <h1>HTML and CSS Authoring 1</h1>
-    <h3>Jennifer Garcia Gray</h3>
-    <h3>Spring Semester 2025</h3>
+    <h3>Jennifer Garcia Gray</h3> <h3>Spring Semester 2025</h3>
 
     <ul>
       <li><a href="cat-photos/index.html">Cat Photos App</a></li>
